src/objects/End_of_Month__c.object
<CustomObject>
    <fields>
        <fullName>Achievable_Revenue_1__c</fullName>
        <label>Achievable Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Achievable_Revenue_2__c</fullName>
        <label>Achievable Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Achievable_Revenue_3__c</fullName>
        <label>Achievable Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Achievable_Revenue_Avg__c</fullName>
        <label>Achievable Revenue - Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_1__c</fullName>
        <label>Active %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active_2__c</fullName>
        <label>Active %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Active_3__c</fullName>
        <label>Active %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Cancel_Rate__c</fullName>
        <formula>1 -  Avg_Retention__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cancel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Pause_Rate__c</fullName>
        <formula>1 -  Avg_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Pause Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_Active__c</fullName>
        <label>Avg Active %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_No_of_Clients__c</fullName>
        <label>Avg No of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Retention__c</fullName>
        <label>Avg Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancel_Rate1__c</fullName>
        <formula>1 - Retention_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancel_Rate2__c</fullName>
        <formula>1 - Retention_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancel_Rate3__c</fullName>
        <formula>1 - Retention_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_1__c</fullName>
        <label>Cancelled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_2__c</fullName>
        <label>Cancelled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_3__c</fullName>
        <label>Cancelled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_Avg__c</fullName>
        <label>Cancelled Revenue - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_Rate_1__c</fullName>
        <formula>Cancelled_Revenue_1__c /  Total_Revenue_Received_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_Rate_2__c</fullName>
        <formula>Cancelled_Revenue_2__c /  Total_Revenue_Received_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_Rate_3__c</fullName>
        <formula>Cancelled_Revenue_3__c /  Total_Revenue_Received_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancelled_Revenue_Rate_Avg__c</fullName>
        <formula>Cancelled_Revenue_Avg__c /  Total_Revenue_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Revenue % - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>End_of_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <label>Month</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <label>Month</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_3__c</fullName>
        <label>Month</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Client_1__c</fullName>
        <label>No of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Clients_2__c</fullName>
        <label>No of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Clients_3__c</fullName>
        <label>No of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offsets_Revenue_Rate_1__c</fullName>
        <formula>Total_Offsets_1__c /  Total_Revenue_Received_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offsets Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offsets_Revenue_Rate_2__c</fullName>
        <formula>Total_Offsets_2__c /  Total_Revenue_Received_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offsets Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offsets_Revenue_Rate_3__c</fullName>
        <formula>Total_Offsets_3__c /  Total_Revenue_Received_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offsets Revenue %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offsets_Revenue_Rate_Avg__c</fullName>
        <formula>Total_Offsets_avg__c /   Total_Revenue_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offsets Revenue % - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pause_Rate1__c</fullName>
        <formula>1 -  Active_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pause Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pause_Rate2__c</fullName>
        <formula>1 - Active_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pause Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pause_Rate3__c</fullName>
        <formula>1 - Active_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pause Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retention_1__c</fullName>
        <label>Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retention_2__c</fullName>
        <label>Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retention_3__c</fullName>
        <label>Retention %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Offsets_1__c</fullName>
        <label>Total Offsets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Offsets_2__c</fullName>
        <label>Total Offsets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Offsets_3__c</fullName>
        <label>Total Offsets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Offsets_avg__c</fullName>
        <label>Total Offsets - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Received_1__c</fullName>
        <label>Total Revenue Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Received_2__c</fullName>
        <label>Total Revenue Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Received_3__c</fullName>
        <label>Total Revenue Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Received__c</fullName>
        <label>Total Revenue Received - Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid_Revenue_1__c</fullName>
        <label>Total Unpaid Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid_Revenue_2__c</fullName>
        <label>Total Unpaid Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid_Revenue_3__c</fullName>
        <label>Total Unpaid Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Unpaid_Revenue_Avg__c</fullName>
        <label>Total Unpaid Revenue - Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>End of Month</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>End of Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>End of Month</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>